syntax = "proto3";

package api.game;

message PlayerId {
    string id = 1;
}
